--- a/pom.xml
+++ b/pom.xml
@@ -36,9 +36,8 @@
 
 	<developers>
 		<developer>
-			<name>JAParejo</name>
-			<email>japarejo@gmail.com</email>
-			<url>http://www.isa.us.es</url>
+			<name>agudevbon</name>
+			<email>agudevbon@alum.us.es</email>
 		</developer>
 	</developers>
 
