--- a/pom.xml
+++ b/pom.xml
@@ -36,8 +36,8 @@
 
 	<developers>
 		<developer>
-			<name>JAParejo</name>
-			<email>japarejo@gmail.com</email>
+			<name>Daniel</name>
+			<email>danalorom1@alum.us.es</email>
 			<url>http://www.isa.us.es</url>
 		</developer>
 	</developers>
