--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,7 +44,7 @@ petclinic.app.jwtExpirationMs= 86400000
 # API Properties
 api.version=1.0-SNAPSHOT
 tos.uri=terms-of-service
-api.server.url=I don't know
-api.description=The API is used to ...
+api.server.url=http://localhost:8080/petclinic/
+api.description=The API provides essential functionalities for the "Pocket Imperium" game, allowing users to interact with game-related data and actions.
 springdoc.swagger-ui.operationsSorter=alpha
 springdoc.swagger-ui.tagsSorter=alpha
